food.html--modify

--- a/css/food.css
+++ b/css/food.css
@@ -2,6 +2,10 @@
 .breadcrumb-item + .breadcrumb-item::before {
   content: " "; }
 
+.area {
+  padding-top: 0.75rem;
+  display: inline-block; }
+
 /*分页*/
 .page-link {
   color: #fff;
