--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@
   width: 8rem;
   height: 8rem;
   border-radius: 50%;
-  background: #ffebeb;
+  background: rgba(0, 0, 0, 0.1);
   position: relative; }
   .logos img {
     position: absolute;
