--- a/scss/comm.scss
+++ b/scss/comm.scss
@@ -1,3 +1,5 @@
+$cq_red:#aa1e11;
+
 body {
   background-color: #f5f5f5 !important; 
 }
@@ -5,13 +7,13 @@ body {
   font-size:0.75rem !important;
 }
 .font-red{
-  color: #aa1e11 !important;
+  color: $cq_red !important; 
 }
 .bg-red{
-  background-color: #aa1e11 !important; 
+  background-color: $cq_red !important; 
 }
 .border-red{
-  border-color: #aa1e11 !important; 
+  border-color: $cq_red !important; 
 }
 .my_header{
   width: 100% !important;
