--- a/css/comm.css
+++ b/css/comm.css
@@ -16,3 +16,7 @@ body {
 .my_header {
   width: 100% !important;
   height: 13.5rem !important; }
+
+.my_footer {
+  width: 100% !important;
+  height: 15rem !important; }
