--- a/scss/comm.scss
+++ b/scss/comm.scss
@@ -19,3 +19,7 @@ body {
   width: 100% !important;
   height:13.5rem !important;
 }
+.my_footer{
+  width: 100% !important;
+  height:15rem !important;
+}
