--- a/scss/index.scss
+++ b/scss/index.scss
@@ -33,10 +33,10 @@
     height: 370px; 
     margin-top:15px ;
 }
-.w-10:hover{
-  transition-duration:2s;
-  width:650px;
-   height:500px; }  
+// .w-10:hover{
+//   transition-duration:2s;
+//   width:650px;
+//    height:500px; }  
 .w-2{
     width:350px;
     height:250px;
