--- a/scss/survey.scss
+++ b/scss/survey.scss
@@ -22,7 +22,7 @@
   margin-left:5%;
 }
 $cq_red:#aa1e11;
-.mock:hover{
+.top-hover:hover{
   color: $cq_red !important;
   text-decoration: none;
 }
