--- a/css/message.css
+++ b/css/message.css
@@ -15,9 +15,55 @@
   border-color: transparent;
   color: #000; }
 
-.forge:hover {
-  color: #aa1e11;
-  text-decoration: none; }
+.top-hover:hover {
+  color: #aa1e11; }
 
 .ph {
   height: 8rem; }
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden; }
+
+.clearfix {
+  display: inline-table; }
+
+.clearfix {
+  display: block; }
+
+.hot ul li {
+  overflow: hidden;
+  position: relative; }
+
+.hot ul li .photo {
+  overflow: hidden; }
+
+.hot .rsp {
+  overflow: hidden;
+  position: absolute;
+  background: #000;
+  top: 0px;
+  left: 0px;
+  display: block;
+  opacity: 0; }
+
+.hot .text {
+  position: absolute;
+  width: 100%;
+  height: 8rem;
+  left: 500px;
+  top: 6px;
+  overflow: hidden;
+  background: rgba(0, 0, 0, 0.5); }
+
+.hot .text h5 a {
+  display: block;
+  margin-top: 80px;
+  line-height: 50px;
+  text-align: center;
+  color: #FFFFFF;
+  font-size: 16px;
+  text-decoration: none; }
