--- a/css/message1.css
+++ b/css/message1.css
@@ -1,8 +1,6 @@
-.breadcrumb {
-  background: transparent; }
-
-.breadcrumb-item + .breadcrumb-item::before {
-  content: ">"; }
-
 .ml-6 {
   margin-left: 13rem !important; }
+
+p::selection, h4::selection {
+  color: #000;
+  background: #f00; }
