--- a/css/index.css
+++ b/css/index.css
@@ -32,24 +32,82 @@
   margin-top: 15px; }
 
 .w-2 {
-  width: 350px;
+  width: 360px;
   height: 250px;
-  margin-right: 20px; }
+  margin-right: 20px;
+  transition:0.6s; }
+  .w-2:hover{
+    width: 370px;height: 260px;
+transform:scale();
+}
 
 .text-s {
   font-size: 20px;
   margin-left: 100px; }
 
-.w-6 {
-  width: 275px;
-  height: 300px; }
-
-.w-7 {
+.w-6{
+  width:275px;
+  height:340px;
+  background:url("../img/index/03.jpg");
+  background-repeat:no-repeat;
+  background-size:650px;
+  margin-top:-13px;
+}
+.w-7{
   width: 100%;
-  height: 120PX;
-  margin-bottom: 10px; }
+  height:140PX;
+  background-image:url("../img/survey/dl.jpg");
+  background-size:560px;
+  margin-bottom:45px;
+ }
+.w-71{
+  margin-top:-69px; 
+  background:rgba(255,255,255,0.2);
+  margin-bottom:25px;
+}
+ 
+.w-8{
+  width: 220px;
+  height:163PX;
+  background-image:url("../img/index/02.jpg"); 
+  background-size:240px;
+  background-repeat:no-repeat;  
+  float: left;
+}
+.w-81{
+  width:250px;
+  height:165PX;
+  background-image:url("../img/index/banner06.jpg"); 
+  background-size:100% 100%;
+  background-repeat:no-repeat; 
+  float: left;
+  margin-left:35px ;
+}
+.w-82{
+  height:60px;
+  width: 233px;
+  margin-top:-22px ;
+  float: left;
+  background:rgba(255,255,255,0.5); 
+}
+.w-83{
+  height:60px;
+  width: 272px;
+  margin-top:-20px ;
+  float: left;
+  background:rgba(255,255,255,0.5); 
+}
 
-.w-8 {
-  width: 240px;
-  height: 170PX;
-  margin-left: 6px; }
+.Wz-1{ 
+width:275px;
+height:330px;
+background:url("../img/index/01.jpg");
+background-repeat:no-repeat;
+background-size:760px;
+}
+.wz-2{
+  height:60px;
+  width: 100%;
+  margin-top:-30px ;
+  background:rgba(255,255,255,0.2);
+}
