--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,64 +1,113 @@
-*{
-    padding: 0px;
-    margin: 0px;
-  }
-    
-  .carousel-inner{
-    height: 420px;
-    width: 100%;
-  }
-  .sz{
-    font-size:43px;
-    font:bold;
-  }
-  #ml1{
-    margin-top:41px ;
-    font-size:10px; 
-    float: right;
-  }
-  .w-9{
-    width: 1px;;
-    font-size:17px;
-  }
-  .border-h{
-    height: 340px;
+* {
+  padding: 0px;
+  margin: 0px; }
+
+.carousel-inner {
+  height: 420px;
+  width: 100%; }
+
+.sz {
+  font-size: 43px;
+  font: bold; }
+
+#ml1 {
+  margin-top: 41px;
+  font-size: 10px;
+  float: right; }
+
+.w-9 {
+  width: 1px;
+  font-size: 17px; }
+
+.border-h {
+  height: 340px;
   border: 1px solid black;
-   border-top:0px ;
-   border-bottom:0px; 
-  
-  }
-  .w-10{
-    margin-left:80px ;
-    width:470px;
-    height: 370px; 
-    margin-top:15px ;
-}
-// .w-10:hover{
-//   transition-duration:2s;
-//   width:650px;
-//    height:500px; }  
-.w-2{
-    width:350px;
-    height:250px;
-    margin-right:20px ;
-}
-.text-s{
-  font-size:20px;
-  margin-left:100px ;
-}
-.w-6{
-width:275px;
-height:300px;
-}
-.w-7{
- width:100%;
-height:120PX;
-margin-bottom:10px;
+  border-top: 0px;
+  border-bottom: 0px; }
+
+.w-10 {
+  margin-left: 80px;
+  width: 470px;
+  height: 370px;
+  margin-top: 15px; }
+
+.w-2 {
+  width: 360px;
+  height: 250px;
+  margin-right: 20px;
+  transition:0.6s; }
+  .w-2:hover{
+    width: 370px;height: 260px;
+transform:scale();
 }
 
+.text-s {
+  font-size: 20px;
+  margin-left: 100px; }
+
+.w-6{
+  width:275px;
+  height:340px;
+  background:url("../img/index/03.jpg");
+  background-repeat:no-repeat;
+  background-size:650px;
+  margin-top:-13px;
+}
+.w-7{
+  width: 100%;
+  height:140PX;
+  background-image:url("../img/survey/dl.jpg");
+  background-size:560px;
+  margin-bottom:45px;
+ }
+.w-71{
+  margin-top:-69px; 
+  background:rgba(255,255,255,0.2);
+  margin-bottom:25px;
+}
+ 
 .w-8{
-    width:240px;
-   height:170PX;
-   margin-left:6px ;
-   }
-  
+  width: 220px;
+  height:163PX;
+  background-image:url("../img/index/02.jpg"); 
+  background-size:240px;
+  background-repeat:no-repeat;  
+  float: left;
+}
+.w-81{
+  width:250px;
+  height:165PX;
+  background-image:url("../img/index/banner06.jpg"); 
+  background-size:100% 100%;
+  background-repeat:no-repeat; 
+  float: left;
+  margin-left:35px ;
+}
+.w-82{
+  height:60px;
+  width: 233px;
+  margin-top:-22px ;
+  float: left;
+  background:rgba(255,255,255,0.5); 
+}
+.w-83{
+  height:60px;
+  width: 272px;
+  margin-top:-20px ;
+  float: left;
+  background:rgba(255,255,255,0.5); 
+}
+
+.Wz-1{ 
+width:275px;
+height:330px;
+background:url("../img/index/01.jpg");
+background-repeat:no-repeat;
+background-size:760px;
+}
+.wz-2{
+  height:60px;
+  width: 100%;
+  margin-top:-30px ;
+  background:rgba(255,255,255,0.2);
+}
